--- a/templates/cards/index.html.twig
+++ b/templates/cards/index.html.twig
@@ -1,4 +1,4 @@
-{% extends '@!Twig/base.html.twig' %}
+{% extends 'base.html.twig' %}
 {% block body %}
   <main style="font: 16px/1.4 system-ui; max-width: 800px; margin: 2rem auto;">
     <h1>Jeu de cartes — Démo</h1>
